--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,17 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    //LiveData + ViewModel
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+
+    // Retrofit + Gson + OkHttp
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
