--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     //material
     implementation 'com.google.android.material:material:1.0.0'
+    // Paging
+    implementation "android.arch.paging:runtime:1.0.1"
+
 }
